--- a/pom.xml
+++ b/pom.xml
@@ -937,26 +937,7 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <version>1.5</version>
-        <executions>
-          <execution>
-            <id>jspcSource-packageInfo-Avro-source</id>
-            <phase>generate-sources</phase>
-            <goals>
-              <goal>add-source</goal>
-            </goals>
-            <configuration>
-              <sources>
-                <source>${project.build.directory}/generated-jamon</source>
-                <source>${project.build.directory}/generated-sources/java</source>
-              </sources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
+     
       <plugin>
         <groupId>org.jamon</groupId>
         <artifactId>jamon-maven-plugin</artifactId>
@@ -1593,7 +1574,8 @@
       <id>hadoop-1.0</id>
       <activation>
         <property>
-          <name>!hadoop.profile</name>
+          <name>hadoop.profile</name>
+          <value>1.0</value>
         </property>
       </activation>
       <properties>
@@ -1818,7 +1800,7 @@
       </activation>
       <properties>
         <hadoop.version>0.22.0</hadoop.version>
-        <slf4j.version>1.6.1</slf4j.version>
+        <slf4j.version>1.4.3</slf4j.version>
       </properties>
       <dependencies>
         <dependency>
@@ -1997,7 +1979,7 @@
       </activation>
       <properties>
         <hadoop.version>0.23.7</hadoop.version>
-        <slf4j.version>1.6.1</slf4j.version>
+        <slf4j.version>1.4.3</slf4j.version>
       </properties>
       <dependencies>
         <dependency>
@@ -2155,13 +2137,12 @@
       <id>hadoop-2.0</id>
       <activation>
         <property>
-          <name>hadoop.profile</name>
-          <value>2.0</value>
+          <name>!hadoop.profile</name>
         </property>
       </activation>
       <properties>
-        <hadoop.version>2.0.0-alpha</hadoop.version>
-        <slf4j.version>1.6.1</slf4j.version>
+        <hadoop.version>2.3.0</hadoop.version>
+        <slf4j.version>1.4.3</slf4j.version>
       </properties>
       <dependencies>
         <dependency>
@@ -2182,51 +2163,6 @@
           <scope>compile</scope>
         </dependency>
       </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>build-helper-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>add-test-resource</id>
-                <goals>
-                  <goal>add-test-resource</goal>
-                </goals>
-                <configuration>
-                  <resources>
-                    <resource>
-                      <directory>src/test/resources</directory>
-                      <includes>
-                        <include>hbase-site.xml</include>
-                      </includes>
-                    </resource>
-                  </resources>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>create-mrapp-generated-classpath</id>
-                <phase>generate-test-resources</phase>
-                <goals>
-                  <goal>build-classpath</goal>
-                </goals>
-                <configuration>
-                  <!-- needed to run the unit test for DS to generate
-                  the required classpath that is required in the env
-                  of the launch container in the mini mr/yarn cluster
-                  -->
-                  <outputFile>${project.build.directory}/test-classes/mrapp-generated-classpath</outputFile>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
     </profile>
 
 
